--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,7 @@
 {% block main-content %}
 <!-- Left content -->
 <div class="row roundedPanel mySection">
-<div class="aboutAll">
-    <h2 class="aboutParagraph text-white">About Drink Advisor</h2>
+    <h2 class="text-white shadowText">About Drink Advisor</h2>
     <div class="aboutParagraph text-white">App is responsible for finding the best drink from products which user has at his
         disposal now. User has to opt
         for several ingredients from the app’s set. It is divided into three groups: alcohols, beverages and fruits.
@@ -20,7 +19,6 @@
         technology, that is useful in creating model of words most connected with others, basing on their common context
         in chosen text.
     </div>
-</div>
 </div>
 
 {% endblock main-content %}
