--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -2,7 +2,7 @@
 
 {% block main-content %}
 <div class="col-md-4 myLeft mySection roundedPanel">
-    <h3 class="text-white">{{title}}</h3>
+    <h2 class="text-white shadowText">{{title}}</h2>
    
   <form method="POST", action="{% url 'app-login' %}">
       {% csrf_token %}
@@ -12,7 +12,7 @@
     <label for="password"><b>Password</b></label>
     <input type="password" class="form-control" placeholder="Password" name="password" required>
     </br>
-    <button class="btn btn-warning" type="submit" name="" value="Login" action=>Login</button>
+    <button class="btn btn-warning buttonShadow" type="submit" name="" value="Login" action=>Login</button>
  </form>           
 </div>
 
