Added drink rate model and tables.

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -97,6 +97,8 @@
 
     <div class="popularSection mySection roundedPanel">
     <h3 class="text-white">Most Popular Drinks</h3>
+    {% load django_tables2 %}
+    {% render_table table %}
         </div>
 
 </div>
