--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -30,6 +30,8 @@
 
 <!-- Right content -->
 <div class="col-md-4 myRight">
+        {% load django_tables2 %}
+        {% render_table table %}
 
 </div>
 {% endblock main-content %}
